--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <div class="row h-100 w-100">
             <div class="col-12 col-sm-6 d-flex justify-content-center">
                 <div class="embed-responsive embed-responsive-16by9">
-                    <video class="embed-responsive-item" style="transform: rotateY(180deg);-webkit-transform:rotateY(180deg);-moz-transform:rotateY(180deg); /* Firefox */" muted></video>
+                    <video playsinline class="embed-responsive-item" style="transform: rotateY(180deg);-webkit-transform:rotateY(180deg);-moz-transform:rotateY(180deg); /* Firefox */" muted></video>
                 </div>
             </div>
 
