--- a/public/index.html
+++ b/public/index.html
@@ -7,47 +7,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
 <body>
-    <h1 id='infoLabel' center hidden>Male</h1>
-    <div class="container-fluid">        
-        <div class="row h-100 w-100">
-            <div class="col-12 col-sm-6 d-flex justify-content-center">
-                <div class="embed-responsive embed-responsive-16by9">
-                    <video playsinline autoplay class="embed-responsive-item" style="transform: rotateY(180deg);-webkit-transform:rotateY(180deg);-moz-transform:rotateY(180deg); /* Firefox */" muted></video>
-                </div>
-            </div>
-
-            <div class="col-12 col-sm-6 d-flex justify-content-center">
-                <div id='infoLabel1' hidden>
-                    <style>
-                        .loader {
-                          border: 16px solid #f3f3f3;
-                          border-radius: 50%;
-                          border-top: 16px solid #3498db;
-                          width: 120px;
-                          height: 120px;
-                          -webkit-animation: spin 2s linear infinite; /* Safari */
-                          animation: spin 2s linear infinite;
-                        }
-                        
-                        /* Safari */
-                        @-webkit-keyframes spin {
-                          0% { -webkit-transform: rotate(0deg); }
-                          100% { -webkit-transform: rotate(360deg); }
-                        }
-                        
-                        @keyframes spin {
-                          0% { transform: rotate(0deg); }
-                          100% { transform: rotate(360deg); }
-                        }
-                    </style>
-                    <div class="loader"></div>
-                </div>
-                <div id="peerDiv"  class="embed-responsive embed-responsive-16by9">
-                </div>
-            </div>
-        </div> 
-    </div>
+    <script src="https://rtcmulticonnection.herokuapp.com/dist/RTCMultiConnection.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="bundle.js"></script>
+    <h1>hahahah</h1>
 </body>
 </html>
