--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,8 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="bundle.js"></script>
     <h1>hahahah</h1>
+
+    <button id="btn-open-room">Open Room</button>
+    <button id="btn-join-room">Join Room</button><hr>
 </body>
 </html>
