--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>VideoChat</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <style>
-        video {max-width:20%;transform: rotateY(180deg);-webkit-transform:rotateY(180deg);-moz-transform:rotateY(180deg);}
+        video {max-width:20%;}
     </style>
 </head>
 <body>
